# secops-env

./: .gitignore  Dockerfile  LICENSE  README.md  improvements.md  inference.py  openenv.yaml  pyproject.toml  run_server.py
secops_env/: __init__.py  client.py  models.py
secops_env/server/: __init__.py  app.py  secops_environment.py
secops_env/server/graders/: access_grader.py  config_grader.py  log_grader.py  pii_grader.py  user_grader.py
secops_env/server/tasks/: config_hardening.py  ghost_user.py  log_analysis.py  pii_redaction.py  public_access.py
server/: __init__.py  app.py  secops_environment.py  tool_simulator.py
server/graders/: access_grader.py  config_grader.py  log_grader.py  pii_grader.py  user_grader.py
server/tasks/: config_hardening.py  ghost_user.py  log_analysis.py  pii_redaction.py  public_access.py
tests/: test_api.py  test_graders.py  test_new_tasks.py  test_tasks.py
